--- a/src/components/layout_components/mainbody/MainBody.css
+++ b/src/components/layout_components/mainbody/MainBody.css
@@ -6,8 +6,3 @@
     padding-right: 2em;
 }
 
-
-h2{
-    color: aqua;
-}
-
